@@ -22,21 +22,19 @@ public class SwipeOrScroll {
 
 		//Gather Desired capabilities
 		DesiredCapabilities capabilities = new DesiredCapabilities();
-		capabilities.setCapability("deviceName","OnePlus AC2001");
-		capabilities.setCapability("platformname", "Android");     
-		capabilities.setCapability("automationName","uiautomator2");
-		capabilities.setCapability("platformversion", "12");
+		capabilities.setCapability("deviceName","Gangesh");
+        capabilities.setCapability("platformname", "Android");     
+        capabilities.setCapability("automationName","uiautomator2");
+        capabilities.setCapability("platformversion", "12");
 
 		capabilities.setCapability("appPackage","io.appium.android.apis");
 		capabilities.setCapability("appActivity", "io.appium.android.apis.ApiDemos");
 		//io.appium.android.apis/io.appium.android.apis.ApiDemos
 
 
-		URL url = URI.create("http://127.0.0.1:4723/").toURL();
-
-		AndroidDriver driver = new AndroidDriver(url, capabilities);
-		Thread.sleep(2000);
-		System.out.println("Application Started");
+		AndroidDriver driver = new AndroidDriver(new URL("http://127.0.0.1:4723/wd/hub"), capabilities);
+        Thread.sleep(5000);
+        System.out.println("Application Started");
 
 
 		//click on view button
